fix: solutions list gap

--- a/styles/solutions.css
+++ b/styles/solutions.css
@@ -37,6 +37,7 @@
   height: 140px;
   border-radius: 20px;
   display: flex;
+  gap: 10px;
   align-items: center;
   padding: 0 60px 0 40px;
   cursor: pointer;
